force-app/main/default/objects/Xandr_Bill__c/Xandr_Bill__c.object-meta.xml
<CustomObject>
    <label>Xandr Bill</label>
    <nameField>
        <label>Xandr Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xandr Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>