force-app/main/default/objects/Xandr_Bill__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>