force-app/main/default/objects/Xandr_Bill__c/fields/Curated_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Curated_Advertiser__c</fullName>
    <label>Curated Advertiser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>