force-app/main/default/objects/Xandr_Bill__c/fields/Curated_Deal__c.field-meta.xml
<CustomField>
    <fullName>Curated_Deal__c</fullName>
    <label>Curated Deal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>