force-app/main/default/objects/Xandr_Bill__c/fields/Curated_Deal_Insertion_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Curated_Deal_Insertion_Order_Id__c</fullName>
    <label>Curated Deal Insertion Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>