force-app/main/default/objects/Xandr_Bill__c/fields/Curated_Deal_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Curated_Deal_Line_Item__c</fullName>
    <label>Curated Deal Line Item</label>
    <length>150</length>
    <type>Text</type>
</CustomField>