force-app/main/default/objects/Xandr_Bill__c/fields/Curator_Net_Media_Cost__c.field-meta.xml
<CustomField>
    <fullName>Curator_Net_Media_Cost__c</fullName>
    <label>Curator Net Media Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>