force-app/main/default/objects/Xandr_Bill__c/fields/Curator_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Curator_Revenue__c</fullName>
    <label>Curator Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>