force-app/main/default/objects/Xandr_Bill__c/fields/Curator_Tech_Fees__c.field-meta.xml
<CustomField>
    <fullName>Curator_Tech_Fees__c</fullName>
    <label>Curator Tech Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>