force-app/main/default/objects/Xandr_Bill__c/fields/Imps__c.field-meta.xml
<CustomField>
    <fullName>Imps__c</fullName>
    <label>Imps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>