force-app/main/default/objects/Xandr_Bill__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Xandr Bills</relationshipLabel>
    <relationshipName>Xandr_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>