force-app/main/default/objects/Xandr_Bill__c/listViews/Basic_line.listView-meta.xml
<ListView>
    <fullName>Basic_line</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Curator_Revenue__c</columns>
    <filterScope>Mine</filterScope>
    <label>Basic line</label>
</ListView>