force-app/main/default/objects/Xandr_Bill__c/listViews/Xandr_Bills.listView-meta.xml
<ListView>
    <fullName>Xandr_Bills</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Curated_Deal__c</columns>
    <columns>Curated_Deal_Insertion_Order__c</columns>
    <columns>Curated_Deal_Line_Item__c</columns>
    <columns>Curator_Revenue__c</columns>
    <columns>Curator_Margin__c</columns>
    <filterScope>Mine</filterScope>
    <label>Xandr Bills</label>
</ListView>